creacion de css y javaScript,

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
+    <script src="./main.js" defer></script>
     
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
@@ -12,20 +14,22 @@
   <body>
      
     <header>
-      <div>
+      <div class="logo__links">
         <img src="./images/logo.svg" alt="logo">
         <article>
-          <ul>
+          <ul class="links__pagina">
             <a href="">Features</a>
             <a href="">Company</a>
-            <a href="">carees</a>
+            <a href="">Carees</a>
             <a href="">About</a>
           </ul>
         </article>
       </div>
-      <div>
-        <h4>login</h4>
-        <h4>Register</h4>
+      <div class="cuenta__snap">
+        <h4 class="lbl__login">login</h4>
+        <div>
+          <h4>Register</h4>
+        </div>
       </div>
     </header>
 
