creacion del main

--- a/index.html
+++ b/index.html
@@ -33,5 +33,28 @@
       </div>
     </header>
 
+    <main>
+      <section class="primera__section">
+        <h1>Make remote work</h1>
+        <p>
+          Get your team in sync, no matter your latation,
+          Streamline processes. create team rituals. and
+          watch productivity soar.
+        </p>
+        <div>
+          <p>Learn more</p>
+        </div>
+        <div>
+          <img src="./images/client-databiz.svg" alt="">
+          <img src="./images/client-audiophile.svg" alt="">
+          <img src="./images/client-meet.svg" alt="">
+          <img src="./images/client-maker.svg" alt="">
+        </div>
+      </section>
+      <section class="segunda__section">
+        <img src="./images/image-hero-desktop.png" alt="">
+      </section>
+    </main>
+
   </body>
 </html>
