estilo de main y modificaciones al css

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img src="./images/logo.svg" alt="logo">
         <article>
           <ul class="links__pagina">
-            <a href="">Features</a>
-            <a href="">Company</a>
+            <a href="">Features <img src="./images/icon-arrow-down.svg" alt=""></a>
+            <a href="">Company <img src="./images/icon-arrow-down.svg" alt=""></a>
             <a href="">Carees</a>
             <a href="">About</a>
           </ul>
@@ -35,16 +35,16 @@
 
     <main>
       <section class="primera__section">
-        <h1>Make remote work</h1>
-        <p>
+        <h1>Make <br> remote work</h1>
+        <p class="descripcion__titulo">
           Get your team in sync, no matter your latation,
           Streamline processes. create team rituals. and
           watch productivity soar.
         </p>
-        <div>
+        <div class="botom__learnMore">
           <p>Learn more</p>
         </div>
-        <div>
+        <div class="imagenes__cliente">
           <img src="./images/client-databiz.svg" alt="">
           <img src="./images/client-audiophile.svg" alt="">
           <img src="./images/client-meet.svg" alt="">
