--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </article>
       </div>
       <div class="cuenta__snap">
-        <h4 class="lbl__login">login</h4>
+        <p class="lbl__login">Login</p>
         <div>
-          <h4>Register</h4>
+          <p>Register</p>
         </div>
       </div>
     </header>
