menu desplegable y efectos hover

--- a/index.html
+++ b/index.html
@@ -19,7 +19,30 @@
         <article>
           <ul class="links__pagina">
             <a href="">Features <img src="./images/icon-arrow-down.svg" alt=""></a>
+            <div class="conten__features">
+              <div>
+                <img src="./images/icon-todo.svg" alt="">
+                <p>Todo List</p>
+              </div>
+              <div>
+                <img src="./images/icon-calendar.svg" alt="">
+                <p>Calendar</p>
+              </div>
+              <div>
+                <img src="./images/icon-reminders.svg" alt="" class="icon-reminders">
+                <p>Reminders</p>
+              </div>
+              <div>
+                <img src="./images/icon-planning.svg" alt="">
+                <p>Planning</p>
+              </div>
+            </div>
             <a href="">Company <img src="./images/icon-arrow-down.svg" alt=""></a>
+            <div class="conten__company">
+              <p>History</p>
+              <p>Our Team</p>
+              <p>Blog</p>
+            </div>
             <a href="">Carees</a>
             <a href="">About</a>
           </ul>
