responsive y ajustes a la web

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <article>
           <ul class="links__pagina">
             <a href="">Features <img src="./images/icon-arrow-down.svg" alt=""></a>
-            <div class="conten__features">
+            <div class="conten__features" id="conten__features">
               <div>
                 <img src="./images/icon-todo.svg" alt="">
                 <p>Todo List</p>
@@ -38,7 +38,7 @@
               </div>
             </div>
             <a href="">Company <img src="./images/icon-arrow-down.svg" alt=""></a>
-            <div class="conten__company">
+            <div class="conten__company" id="conten__company">
               <p>History</p>
               <p>Our Team</p>
               <p>Blog</p>
@@ -54,11 +54,14 @@
           <p>Register</p>
         </div>
       </div>
+      <figure>
+        <img src="./images/icon-menu.svg" alt="">
+      </figure>
     </header>
 
     <main>
       <section class="primera__section">
-        <h1>Make <br> remote work</h1>
+        <h1>Make remote work</h1>
         <p class="descripcion__titulo">
           Get your team in sync, no matter your latation,
           Streamline processes. create team rituals. and
@@ -75,7 +78,7 @@
         </div>
       </section>
       <section class="segunda__section">
-        <img src="./images/image-hero-desktop.png" alt="">
+        <!-- <img src="./images/image-hero-desktop.png" alt=""> -->
       </section>
     </main>
 
