--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="./main.js" defer></script>
 
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  <title>snap</title>
 
 </head>
 
@@ -24,8 +24,8 @@
       <img src="./images/logo.svg" alt="logo">
       <article>
         <ul class="links__pagina">
-          <a id="lbl__Feature">Features <img src="./images/icon-arrow-down.svg" alt=""> </a>
-          <div class="conten__features" id="conten__features">
+          <a id="lbl__Feature">Features <img src="./images/icon-arrow-down.svg" alt="" id="img__features"> </a>
+          <div class="conten__features" style="display: none;" id="conten__features">
             <div>
               <img src="./images/icon-todo.svg" alt="">
               <p>Todo List</p>
@@ -43,8 +43,8 @@
               <p>Planning</p>
             </div>
           </div>
-          <a id="lbl__company">Company <img src="./images/icon-arrow-down.svg" alt=""></a>
-          <div class="conten__company" id="conten__company">
+          <a id="lbl__company">Company <img src="./images/icon-arrow-down.svg" alt="" id="img__company"></a>
+          <div class="conten__company" style="display: none;" id="conten__company">
             <p>History</p>
             <p>Our Team</p>
             <p>Blog</p>
